<resources>
    <string name="app_name">DBChallenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn_label">Log into DropBox</string>
    <string name="logout_btn_label">Log out from DropBox</string>
    <string name="logout_issue_msg">Login problem:</string>
    <string name="take_photo_btn_label">Take A Photo</string>
    <string name="no_camera_msg">There is no camera!</string>
    <string name="post_camera_warning_msg">The activity result is not ok: </string>
    <string name="uploading">Uploading...</string>
    <string name="downloading">Downloading...</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="photo_uploaded_msg">The photo has been uploaded!</string>
    <string name="not_authenticated_msg">This app was not authenticated.</string>
    <string name="file_too_big_msg">This file is too big to upload!</string>
    <string name="upload_canceled_msg">Upload canceled</string>
    <string name="download_canceled_msg">Download canceled</string>
    <string name="network_error_msg">Network error. Please try again</string>
    <string name="dropbox_error_msg">DropBox error. Please try again.</string>
    <string name="canceled">Canceled</string>
    <string name="empty_directory">Not a directory or empty directory</string>
    <string name="no_photo_directory">No photos in the directory</string>
    <string name="create_local_file_problem">Problem creating a local file to store the photo</string>
    <string name="google_map_btn_label">Photo locations</string>
    <string name="loading_photo_list_error">Error occurred when loading photo list</string>
    <string name="facebook_success">Your photo has been posted!</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="post_to_facebook">Post the photo to Facebook</string>
    <string name="app_id">952233731465263</string>
    <string name="photo_taken_in">The photo was taken in</string>
    <string name="no_file_dialog_title">Audio File</string>
    <string name="no_file_dialog_msg">Sorry, there is no audio file. Please record one.</string>
    <string name="start_record_button_label">Start REC</string>
    <string name="stop_record_button_label">Stop REC</string>
    <string name="play_button_label">Play</string>
    <string name="stop_button_label">Stop</string>
    <string name="audio_file_label">Audio File</string>
    <string name="text_note_label">Text Note</string>
    <string name="refresh_btn_label">Refresh the list</string>
</resources>
