<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<Button
      android:id="@+id/login_button"
	  android:text="@string/login_btn_label"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
	  />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button
          android:id="@+id/take_photo_btn"
          android:text="@string/take_photo_btn_label"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          />
        <Button
            android:id="@+id/google_map_btn"
            android:text="@string/google_map_btn_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_list_display"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
